--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "sweetalert2": "^11.7.5",
     "vue": "^3.3.2"
   },
   "devDependencies": {
