--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "sweetalert2": "^11.4.8",
     "vue": "^3.3.2"
   },
